changed home url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joshua-website",
-  "homepage": "https://jchua24.github.io/",
+  "homepage": "https://jchua24.github.io/personal-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
